# IssueLab

./: .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/prompts/: stargazer_outreach.md
.github/workflows/: agent.yml  arxiv_monitor.yml  auto_close_stale_issues.yml  ci.yml  dispatch_agents.yml  merge_agent_pr.yml  observer.yml  orchestrator.yml  personal_agent_scan.yml  pubmed_monitor.yml  user_agent.yml
agents/: README.md
agents/_registry/: gqy22.yml
agents/_template/: agent.yml  personal_agent.yml
agents/arxiv_observer/: agent.yml  prompt.md
agents/daiduo2/: agent.yml  prompt.md
agents/echo/: prompt.md
agents/gqy20/: .mcp.json  agent.yml  prompt.md
agents/gqy22/: agent.yml  prompt.md
agents/moderator/: agent.yml  prompt.md
agents/observer/: agent.yml  prompt.md
agents/ops_daily/: agent.yml  (+1 more)
config/: collaboration.yml  response_format.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DISPATCH_SETUP.md  DYNAMIC_TOKEN_GENERATION.md  GITHUB_APP_CHECKLIST.md  GITHUB_APP_SETUP.md  LOG_DOWNLOAD_GUIDE.md  MVP.md  OBSERVER_AUTO_TRIGGER.md  PERSONAL_AGENT_SCAN.md  PROJECT_GUIDE.md  TECHNICAL_DESIGN.md  TESTING_TRIGGERS.md  USER_QUICKSTART.md
prompts/: echo.md  moderator.md  observer.md  pubmed_observer.md  reviewer_a.md  reviewer_b.md  summarizer.md  test.md
scripts/: README.md  daily_issue_health_agent_report.py  daily_issue_health_report.py  monitor_arxiv.py  monitor_pubmed.py  stats_agent_usage.py  validate_agent_pr.py
tests/: test_agents.py  test_cli.py  test_custom_agents.py  test_github.py  test_gqy20_pipeline.py  test_integration.py  test_main.py  test_mention_policy.py  test_observer_prompt_cleaning.py  test_observer_trigger.py  test_personal_scan.py  test_response_processor.py  test_retry.py  test_sdk_executor.py  test_sdk_timeout.py  test_workflow.py  test_workflow_optimization.py
(+43 files in other folders)
