[project]
name = "issuelab"
version = "0.1.0"
description = "AI 辅助科研评审系统"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.29",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
    "feedparser>=6.0.0",
    "PyGithub>=2.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "pytest-cov>=7.0.0"]
video = ["manim==0.19.0"]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "types-PyYAML>=6.0.12.20240917",
    "types-requests>=2.32.0.20240914",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/issuelab"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# 目标 Python 版本
target-version = "py312"

# 每行最大字符数
line-length = 120

# 排除目录
extend-exclude = [
    "__pycache__",
    ".venv",
    ".git",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# 启用的规则集
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# 忽略的规则
ignore = [
    "E501",  # 行长度由 formatter 处理
    "B008",  # 函数调用中的默认参数（fastapi 需要）
]

# 允许自动修复的规则
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# 使用双引号
quote-style = "double"

# 缩进使用空格
indent-style = "space"

# 跳过魔术尾随逗号
skip-magic-trailing-comma = false

# 自动检测行尾符
line-ending = "auto"

[tool.ruff.lint.isort]
# isort 配置
known-first-party = ["issuelab"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
